--- a/achievements.html
+++ b/achievements.html
@@ -490,6 +490,7 @@
         }
 
         /* Mobile Responsive */
+        
         /* Mobile Responsive */
 @media (max-width: 968px) {
     nav ul {
@@ -536,29 +537,24 @@
         font-size: 2rem;
     }
 
-    /* Mobile Timeline Adjustments */
+    /* Keep alternating timeline on tablet */
     .timeline-line {
-        left: 20px;
-        width: 2px;
+        left: 50%;
     }
 
     .achievement-marker {
-        left: 20px;
-        width: 16px;
-        height: 16px;
-        border: 3px solid var(--white);
-        box-shadow: 0 0 0 4px var(--neutral-light);
+        left: 50%;
     }
 
-    .achievement-item {
-        margin-bottom: 3rem;
+    /* Reduce spacing for smaller cards */
+    .achievement-item:nth-child(odd) .achievement-content {
+        margin-right: 51%;
+        margin-left: 0;
     }
 
-    .achievement-item:nth-child(odd) .achievement-content,
     .achievement-item:nth-child(even) .achievement-content {
-        margin-left: 50px;
+        margin-left: 51%;
         margin-right: 0;
-        text-align: left;
     }
 
     .achievement-image {
@@ -646,18 +642,18 @@
         font-size: 0.9rem;
     }
 
-    /* Timeline Mobile Optimized */
+    /* Timeline Mobile - KEEP ALTERNATING */
     .timeline-section {
-        padding: 2rem 1rem 3rem;
+        padding: 2rem 0.5rem 3rem;
     }
 
     .timeline-line {
-        left: 15px;
+        left: 50%;
         width: 2px;
     }
 
     .achievement-marker {
-        left: 15px;
+        left: 50%;
         width: 14px;
         height: 14px;
         border: 2px solid var(--white);
@@ -668,9 +664,16 @@
         margin-bottom: 2.5rem;
     }
 
-    .achievement-item:nth-child(odd) .achievement-content,
+    /* LEFT side cards (odd) - smaller margin */
+    .achievement-item:nth-child(odd) .achievement-content {
+        margin-right: 52%;
+        margin-left: 0;
+        text-align: right;
+    }
+
+    /* RIGHT side cards (even) - smaller margin */
     .achievement-item:nth-child(even) .achievement-content {
-        margin-left: 40px;
+        margin-left: 52%;
         margin-right: 0;
         text-align: left;
     }
@@ -680,34 +683,34 @@
     }
 
     .achievement-image {
-        height: 180px;
+        height: 160px;
     }
 
     .achievement-details {
-        padding: 1.2rem;
+        padding: 1rem;
     }
 
     .achievement-date {
-        font-size: 0.8rem;
+        font-size: 0.75rem;
         padding: 0.4rem 0.8rem;
         margin-bottom: 0.8rem;
     }
 
     .achievement-title {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         margin-bottom: 0.8rem;
-        line-height: 1.4;
+        line-height: 1.3;
     }
 
     .achievement-category {
-        font-size: 0.75rem;
+        font-size: 0.7rem;
         padding: 0.3rem 0.8rem;
         margin-bottom: 0.8rem;
     }
 
     .achievement-description {
-        font-size: 0.9rem;
-        line-height: 1.6;
+        font-size: 0.85rem;
+        line-height: 1.5;
     }
 
     /* No Results Mobile */
@@ -724,86 +727,73 @@
     }
 }
 
-/* Extra Small Devices */
+/* Extra Small Devices - Still alternating but tighter */
 @media (max-width: 400px) {
     .page-header h1 {
         font-size: 1.6rem;
     }
 
     .page-header p {
-        font-size: 1rem;
+        font-size: 0.95rem;
+    }
+
+    .timeline-section {
+        padding: 2rem 0.3rem 3rem;
     }
 
     .timeline-line {
-        left: 12px;
+        left: 50%;
+        width: 2px;
     }
 
     .achievement-marker {
-        left: 12px;
+        left: 50%;
         width: 12px;
         height: 12px;
     }
 
-    .achievement-item:nth-child(odd) .achievement-content,
+    .achievement-item {
+        margin-bottom: 2rem;
+    }
+
+    /* Very tight margins for tiny screens */
+    .achievement-item:nth-child(odd) .achievement-content {
+        margin-right: 52%;
+        margin-left: 0;
+    }
+
     .achievement-item:nth-child(even) .achievement-content {
-        margin-left: 35px;
+        margin-left: 52%;
+        margin-right: 0;
     }
 
     .achievement-image {
-        height: 160px;
+        height: 140px;
     }
 
     .achievement-details {
-        padding: 1rem;
+        padding: 0.8rem;
     }
 
     .achievement-title {
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
 
     .achievement-description {
-        font-size: 0.85rem;
+        font-size: 0.8rem;
+    }
+
+    .achievement-date {
+        font-size: 0.7rem;
+        padding: 0.3rem 0.6rem;
+    }
+
+    .achievement-category {
+        font-size: 0.65rem;
+        padding: 0.25rem 0.6rem;
     }
 }
 
-        @media (max-width: 640px) {
-            .nav-container {
-                padding: 1rem;
-            }
-
-            .school-name {
-                font-size: 1rem;
-            }
-
-            .page-header {
-                padding: 3rem 1rem;
-            }
-
-            .page-header h1 {
-                font-size: 2rem;
-            }
-
-            .stats-section {
-                margin-top: -2rem;
-            }
-
-            .filter-buttons {
-                flex-direction: column;
-                align-items: stretch;
-            }
-
-            .filter-btn {
-                width: 100%;
-            }
-
-            .achievement-image {
-                height: 180px;
-            }
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
     </style>
 </head>
 <body>
