--- a/staff.html
+++ b/staff.html
@@ -808,9 +808,9 @@
 </div>
 
 
-               <div class="leader-card" id="vicePrincipalCard">
-    <!-- Will be loaded from Supabase -->
-</div>
+               <!-- <div class="leader-card" id="vicePrincipalCard">
+    
+</div> -->
 
             </div>
         </div>
