--- a/index.html
+++ b/index.html
@@ -634,7 +634,8 @@
                 <img src="hcc.jpg" 
                      alt="HCC High School Building" 
                      style="width: 100%; 
-                            height: 500px; 
+                            height: auto; 
+                            aspect-ratio: 16 / 9; 
                             object-fit: cover; 
                             object-position: center;
                             border-radius: 16px; 
@@ -1374,4 +1375,5 @@
 </script>
    </body>
 </html>
+
 
