--- a/index.html
+++ b/index.html
@@ -1890,7 +1890,6 @@ html {
 
 
     <!-- Alumni Section -->
-    <!-- Alumni Section -->
 <section class="alumni-section">
     <div class="alumni-container">
         <h2 class="section-title">Our Distinguished Alumni</h2>
@@ -1915,38 +1914,38 @@ html {
 
                 <!-- Alumni 2 -->
                 <div class="alumni-card">
-                    <img src="https://YOUR_SUPABASE_URL/storage/v1/object/public/alumni/alumni2.jpg" 
+                    <img src="https://tqpjyqrlawhjuzugosyh.supabase.co/storage/v1/object/public/site_videos/Azar%20Jahangirdar.png" 
                          alt="Priya Sharma" class="alumni-image">
-                    <h3 class="alumni-name">Priya Sharma</h3>
-                    <p class="alumni-designation">Software Engineer, Google</p>
-                    <p class="alumni-quote">The teachers at HCC inspired me to pursue technology and innovation fearlessly.</p>
+                    <h3 class="alumni-name">Azhar Jahagirdar</h3>
+                    <p class="alumni-designation">Aspiring Software Developer | Automotive Technology Enthusiast</p>
+                    <p class="alumni-quote">With strong self-belief and constant support, I strive to turn my dreams into impactful technology.</p>
                 </div>
 
                 <!-- Alumni 3 -->
                 <div class="alumni-card">
-                    <img src="https://YOUR_SUPABASE_URL/storage/v1/object/public/alumni/alumni3.jpg" 
+                    <img src="https://tqpjyqrlawhjuzugosyh.supabase.co/storage/v1/object/public/site_videos/Dr%20Ashish%20VishwasSunita%20Paul.png" 
                          alt="Amit Deshmukh" class="alumni-image">
-                    <h3 class="alumni-name">Amit Deshmukh</h3>
-                    <p class="alumni-designation">IAS Officer, Maharashtra Cadre</p>
-                    <p class="alumni-quote">HCC instilled discipline, leadership, and a sense of social responsibility in me.</p>
+                    <h3 class="alumni-name">Dr. Ashish VishwasSunita Paul</h3>
+                    <p class="alumni-designation">Physiotherapist | Healthcare Professional</p>
+                    <p class="alumni-quote">HCC was not just an institution, but a second home that shaped my journey, values, and success.</p>
                 </div>
 
                 <!-- Alumni 4 -->
                 <div class="alumni-card">
-                    <img src="https://YOUR_SUPABASE_URL/storage/v1/object/public/alumni/alumni4.jpg" 
+                    <img src="https://tqpjyqrlawhjuzugosyh.supabase.co/storage/v1/object/public/site_videos/Manish%20Gurbani.png" 
                          alt="Sneha Patil" class="alumni-image">
-                    <h3 class="alumni-name">Sneha Patil</h3>
-                    <p class="alumni-designation">Entrepreneur, Founder of EduTech Solutions</p>
-                    <p class="alumni-quote">My journey from HCC classroom to running my own startup has been incredible.</p>
+                    <h3 class="alumni-name">Manish Gurbani</h3>
+                    <p class="alumni-designation">Software Engineer at Paris</p>
+                    <p class="alumni-quote">From classroom concepts to real-world innovation, my journey shaped me into a global software professional.</p>
                 </div>
 
                 <!-- Alumni 5 -->
                 <div class="alumni-card">
-                    <img src="https://YOUR_SUPABASE_URL/storage/v1/object/public/alumni/alumni5.jpg" 
+                    <img src="https://tqpjyqrlawhjuzugosyh.supabase.co/storage/v1/object/public/site_videos/FELIX%20JOHN.png" 
                          alt="Vikram Joshi" class="alumni-image">
-                    <h3 class="alumni-name">Vikram Joshi</h3>
-                    <p class="alumni-designation">Chartered Accountant, KPMG Partner</p>
-                    <p class="alumni-quote">The strong mathematics foundation from HCC led me to excel in finance and accounting.</p>
+                    <h3 class="alumni-name">Felix John</h3>
+                    <p class="alumni-designation">Lab Assistant at St. Joseph</p>
+                    <p class="alumni-quote">Every experiment and lesson at HCC strengthened my foundation in learning and discipline.</p>
                 </div>
 
                 <!-- Alumni 6 -->
@@ -3138,4 +3137,4 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
     window.showNotificationSettings = showNotificationSettings;
 </script>
    </body>
-</html>
+</html> 
