--- a/about.html
+++ b/about.html
@@ -444,6 +444,77 @@
             height: 40px;
             fill: var(--white);
         }
+        .map-section {
+    margin-top: 80px;           /* Clears the fixed header */
+    padding: 2rem 1rem;
+    background: var(--bg-light);
+}
+
+.map-wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.map-title {
+    font-size: 2.2rem;
+    color: var(--maroon-dark);
+    margin-bottom: 1.5rem;
+    font-weight: 600;
+}
+
+.map-frame {
+    max-width: 1000px;
+    margin: 0 auto 2rem;
+    box-shadow: 0 10px 30px rgba(34, 7, 7, 0.12);
+    border-radius: 12px;
+    overflow: hidden;
+    transition: transform 0.4s ease;
+}
+
+.map-frame:hover {
+    transform: scale(1.015);
+}
+
+.map-button-container {
+    margin: 1rem 0 3rem;
+}
+
+.map-directions-btn {
+    display: inline-block;
+    background: var(--maroon-primary);
+    color: var(--white);
+    padding: 1rem 2.2rem;
+    font-size: 1.1rem;
+    font-weight: 600;
+    border-radius: 50px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    box-shadow: 0 6px 20px rgba(83, 28, 34, 0.25);
+}
+
+.map-directions-btn:hover {
+    background: var(--maroon-dark);
+    transform: translateY(-4px);
+    box-shadow: 0 12px 30px rgba(34, 7, 7, 0.3);
+}
+
+/* Mobile adjustments */
+@media (max-width: 768px) {
+    .map-section {
+        padding: 1.5rem 1rem;
+    }
+    .map-title {
+        font-size: 1.8rem;
+    }
+    .map-frame iframe {
+        height: 380px;
+    }
+    .map-directions-btn {
+        padding: 0.9rem 1.8rem;
+        font-size: 1rem;
+    }
+}
     </style>
 </head>
 <body>
@@ -478,7 +549,36 @@
                 <span></span>
             </div>
         </div>
-    </header>
+    </header><!-- Map Section - Visible + Small Button Below -->
+<section class="map-section">
+    <div class="map-wrapper">
+        <h2 class="map-title">Find Us Here</h2>
+        
+        <!-- Google Maps Embed - Replace src with your exact embed code -->
+        <div class="map-frame">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3820.678!2d75.904!3d17.671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc5c1f8b8b8b8b8%3A0xabcdef1234567890!2sHindustani%20Covenant%20Church%20English%20Medium%20School%2C%20166%2C%20Church%20Street%2C%20Railway%20Lines%2C%20Siddheshwar%20Peth%2C%20Solapur%2C%20Maharashtra%20413001!5e0!3m2!1sen!2sin!4v1730000000000!5m2!1sen!2sin"
+                width="100%" 
+                height="450" 
+                style="border:0; border-radius: 12px;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade"
+                title="HCC High School Location - Solapur">
+            </iframe>
+        </div>
+
+        <!-- Small Button Below -->
+        <div class="map-button-container">
+            <a href="https://maps.app.goo.gl/sDjQHFBBWjSFGLzz5" 
+               target="_blank" 
+               rel="noopener noreferrer" 
+               class="map-directions-btn">
+                Get Directions to HCC High School
+            </a>
+        </div>
+    </div>
+</section>  
 
     <!-- Page Header -->
     <div class="page-header">
@@ -676,3 +776,4 @@
     </script>
 </body>
 </html>
+
