--- a/index.html
+++ b/index.html
@@ -1748,11 +1748,11 @@ nav a:hover::after {
             <div class="alumni-slider-track" id="alumniSliderTrack">
                 <!-- Alumni 1 -->
                 <div class="alumni-card">
-                    <img src="https://YOUR_SUPABASE_URL/storage/v1/object/public/alumni/alumni1.jpg"
+                    <img src="https://tqpjyqrlawhjuzugosyh.supabase.co/storage/v1/object/public/site_videos/yahya.jpg"
                          alt="Dr. Rajesh Kumar" class="alumni-image">
-                    <h3 class="alumni-name">Dr. Rajesh Kumar</h3>
-                    <p class="alumni-designation">Chief Surgeon, Apollo Hospital</p>
-                    <p class="alumni-quote">HCC shaped my foundation in science and values that guide my medical practice today.</p>
+                    <h3 class="alumni-name">Yahya Mundewadi</h3>
+                    <p class="alumni-designation"> Founder & CEO of Dominal Tech @dominal.in | Software Engineer </p>
+                    <p class="alumni-quote">The confidence and communication skills I gained here contributed greatly to my growth. Today, I'm a Founder and Software Developer. Forever thankful to my school and teachers.</p>
                 </div>
 
                 <!-- Alumni 2 -->
@@ -2981,3 +2981,4 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 
    </body>
 </html> 
+
