--- a/index.html
+++ b/index.html
@@ -463,20 +463,63 @@
             color: var(--white);
         }
 
-        .contact-item {
-            display: flex;
-            align-items: center;
-            gap: 0.8rem;
-            margin-bottom: 1rem;
-        }
+         .contact-item {
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+    margin-bottom: 14px;
+    font-size: 0.95rem;
+    line-height: 1.5;
+}
 
-        .contact-icon {
-            width: 20px;
-            height: 20px;
-            background: var(--maroon-primary);
-            border-radius: 4px;
-        }
+.contact-icon {
+    width: 22px;
+    height: 22px;
+    min-width: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.contact-icon svg {
+    width: 100%;
+    height: 100%;
+   fill: #fff; /* WHITE SVGs */
+}
+
+.contact-item a {
+    color: inherit;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.contact-item a:hover {
+    color: var(--maroon-primary);
+    text-decoration: underline;
+}
+
+/* Force icon + text alignment */
+.contact-item a {
+    display: flex;
+    align-items: center;          /* vertical alignment */
+    gap: 12px;
+}
+
+/* Align icon with first line of text */
+.contact-icon {
+    align-self: flex-start;       /* aligns with text top */
+    margin-top: 2px;              /* fine-tune baseline */
+}
+
+/* Prevent icon jumping during animation */
+.map-icon {
+    transform-origin: center;
+}
+
+/* Ensure text wraps nicely beside icon */
+.contact-item span:last-child {
+    display: inline;
+}
         .footer-bottom {
             text-align: center;
             padding-top: 2rem;
@@ -1292,9 +1335,10 @@ nav a:hover::after {
     }
 
     .alumni-card {
-        flex: 0 0 calc(100% - 20px);  /* slightly smaller → looks centered */
-        padding: 2rem 1.5rem;
-    }
+    flex: 0 0 calc(100% - 10px);
+    padding: 2rem 1.5rem;
+}
+
 
     .alumni-image {
         width: 120px;
@@ -1436,19 +1480,63 @@ nav a:hover::after {
         color: var(--white);
     }
 
-    .contact-item {
-        display: flex;
-        align-items: center;
-        gap: 0.8rem;
-        margin-bottom: 1rem;
-    }
+   
+.contact-item {
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+    margin-bottom: 14px;
+    font-size: 0.95rem;
+    line-height: 1.5;
+}
 
-    .contact-icon {
-        width: 20px;
-        height: 20px;
-        background: var(--maroon-primary);
-        border-radius: 4px;
-    }
+.contact-icon {
+    width: 22px;
+    height: 22px;
+    min-width: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-icon svg {
+    width: 100%;
+    height: 100%;
+    fill: #fff; /* WHITE SVGs */
+}
+
+.contact-item a {
+    color: inherit;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.contact-item a:hover {
+    color: var(--maroon-primary);
+    text-decoration: underline;
+}
+/* Force icon + text alignment */
+.contact-item a {
+    display: flex;
+    align-items: center;          /* vertical alignment */
+    gap: 12px;
+}
+
+/* Align icon with first line of text */
+.contact-icon {
+    align-self: flex-start;       /* aligns with text top */
+    margin-top: 2px;              /* fine-tune baseline */
+}
+
+/* Prevent icon jumping during animation */
+.map-icon {
+    transform-origin: center;
+}
+
+/* Ensure text wraps nicely beside icon */
+.contact-item span:last-child {
+    display: inline;
+}
 
     .footer-bottom {
         text-align: center;
@@ -1620,6 +1708,36 @@ nav a:hover::after {
             font-size: 0.9rem;
         }
 
+    }
+
+
+.hero-image {
+    width: 100%;
+}
+
+.hero-image img {
+    width: 100%;
+          /* Landscape on desktop */
+    object-fit: cover;
+    object-position: center;
+    border-radius: 16px;
+    box-shadow: 0 20px 60px rgba(34, 7, 7, 0.15);
+}
+
+/* 📱 Mobile: show FULL image, no crop */
+@media (max-width: 768px) {
+    .hero-image img {
+        aspect-ratio: auto;
+        height: auto;
+        max-height: 480px;     /* 🔥 big increase */
+        width: 108%;
+        margin-left: -4%;
+        object-fit: contain;
+        background: #f5f5f5;
+    }
+}
+
+
 
 
 
@@ -1663,22 +1781,16 @@ nav a:hover::after {
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Welcome to HCC High School</h1>
-                <p>Empowering minds, shaping futures. Excellence in education since 1990.</p>
+                <p>Empowering minds, shaping futures. Excellence in education since 1999.</p>
                 <div class="cta-buttons">
                     <a href="admission.html" class="btn btn-primary">Admissions Open 2026-27</a>
                     <a href="about.html" class="btn btn-secondary">About Us</a>
                 </div>
             </div>
             <div class="hero-image">
-                <img src="hcc.jpg" 
-                     alt="HCC High School Building" 
-                     style="width: 100%; 
-                            height: 500px; 
-                            object-fit: cover; 
-                            object-position: center;
-                            border-radius: 16px; 
-                            box-shadow: 0 20px 60px rgba(34, 7, 7, 0.15);">
-            </div>
+    <img src="hcc.jpg" alt="HCC High School Building">
+</div>
+
         </div>
     </section>
 
@@ -1732,13 +1844,13 @@ nav a:hover::after {
 
 
     <!-- Alumni Section -->
-<!-- Alumni Section -->
+    <!-- Alumni Section -->
 <section class="alumni-section">
     <div class="alumni-container">
         <h2 class="section-title">Our Distinguished Alumni</h2>
         <p class="section-subtitle">Proud graduates making an impact across the world</p>
-
-        <div class="alumni-slider-wrapper">
+        
+       <div class="alumni-slider-wrapper">
             <button class="slider-arrow slider-arrow-left" id="prevAlumni" aria-label="Previous alumni">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.41 7.41L14 6L8 12L14 18L15.41 16.59L10.83 12L15.41 7.41Z"/>
@@ -1749,7 +1861,7 @@ nav a:hover::after {
                 <!-- Alumni 1 -->
                 <div class="alumni-card">
                     <img src="https://tqpjyqrlawhjuzugosyh.supabase.co/storage/v1/object/public/site_videos/yahya.jpg"
-                         alt="Dr. Rajesh Kumar" class="alumni-image">
+                         alt="Yahya Mundewadi" class="alumni-image">
                     <h3 class="alumni-name">Yahya Mundewadi</h3>
                     <p class="alumni-designation"> Founder & CEO of Dominal Tech @dominal.in | Software Engineer </p>
                     <p class="alumni-quote">The confidence and communication skills I gained here contributed greatly to my growth. Today, I'm a Founder and Software Developer. Forever thankful to my school and teachers.</p>
@@ -1846,6 +1958,7 @@ nav a:hover::after {
 
         <div class="alumni-dots" id="alumniDots"></div>
     </div>
+    
 </section>
 
     <!-- Quick Highlights -->
@@ -1920,20 +2033,43 @@ nav a:hover::after {
             </div>
 
             <div class="footer-section">
-                <h3>Contact Information</h3>
-                <div class="contact-item">
-                    <div class="contact-icon"></div>
-                    <span>123 School Road, Solapur, Maharashtra</span>
-                </div>
-                <div class="contact-item">
-                    <div class="contact-icon"></div>
-                    <span>+91 1234567890</span>
-                </div>
-                <div class="contact-item">
-                    <div class="contact-icon"></div>
-                    <span>info@hccschool.edu.in</span>
-                </div>
-            </div>
+    <h3>Contact Information</h3>
+
+    <!-- Address -->
+    <div class="contact-item ">
+        <a href="https://maps.app.goo.gl/4A8v38nVbPxUxZrM8" target="_blank" rel="noopener">
+            <span class="contact-icon map-icon">
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5z"/>
+                </svg>
+            </span>
+            <span>166, Church Street, Solapur, Maharashtra 413001</span>
+        </a>
+    </div>
+
+    <!-- Phone -->
+    <div class="contact-item">
+        <span class="contact-icon">
+            <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M6.62 10.79a15.53 15.53 0 0 0 6.59 6.59l2.2-2.2a1 1 0 0 1 1.01-.24c1.12.37 2.33.57 3.58.57a1 1 0 0 1 1 1V20a1 1 0 0 1-1 1C10.07 21 3 13.93 3 5a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1c0 1.25.2 2.46.57 3.59a1 1 0 0 1-.25 1.01l-2.2 2.19z"/>
+            </svg>
+        </span>
+        <a href="tel:+918625902920">+91 8625902920</a>
+    </div>
+
+    <!-- Instagram -->
+    <div class="contact-item">
+        <span class="contact-icon">
+            <svg viewBox="0 0 24 24" aria-hidden="true">
+                <path d="M7 2C4.24 2 2 4.24 2 7v10c0 2.76 2.24 5 5 5h10c2.76 0 5-2.24 5-5V7c0-2.76-2.24-5-5-5H7zm10 2a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V7a3 3 0 0 1 3-3h10zm-5 3.5A4.5 4.5 0 1 0 16.5 12 4.51 4.51 0 0 0 12 7.5zm0 7.3A2.8 2.8 0 1 1 14.8 12 2.81 2.81 0 0 1 12 14.8zM17.2 6.3a1.05 1.05 0 1 0 1.05 1.05 1.05 1.05 0 0 0-1.05-1.05z"/>
+            </svg>
+        </span>
+        <a href="https://www.instagram.com/hcc_high_school_/" target="_blank" rel="noopener">
+            @hcc_high_school_
+        </a>
+    </div>
+</div>
+
 
             <div class="footer-section">
                 <h3>Notifications</h3>
@@ -2975,10 +3111,8 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
         }, 15000);
     });
 
-    // Make showNotificationSettings available globally 
+    // Make showNotificationSettings available globally
     window.showNotificationSettings = showNotificationSettings;
 </script>
-
    </body>
-</html> 
-
+</html>
