--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <meta name="keywords" content="HCC High School, Solapur, Education, Admissions, School">
     <meta name="theme-color" content="#220707">
 
+
+     <!-- SEO Meta Tags - ADD THESE -->
+  <meta name="description" content="HCC High School and Junior College Solapur - Hindustan Covenant Church School providing quality education in Solapur, Maharashtra">
+  <meta name="keywords" content="HCC High School, Solapur school, Hindustan Covenant Church, Junior College Solapur, education Solapur">
+  <meta name="author" content="HCC High School Solapur">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph Tags - ADD THESE -->
+  <meta property="og:title" content="HCC High School Solapur">
+  <meta property="og:description" content="Hindustan Covenant Church High School and Junior College, Solapur">
+  <meta property="og:image" content="https://hccsolapur.in/hcclogo.jpg">
+  <meta property="og:url" content="https://hccsolapur.in">
+  <meta property="og:type" content="website">
+  
+  <!-- Canonical URL - ADD THIS (change URL for each page) -->
+  <link rel="canonical" href="https://hccsolapur.in/index.html">
+  
+  <!-- Schema Markup - ADD THIS -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "HighSchool",
+    "name": "Hindustan Covenant Church High School and Junior College",
+    "alternateName": "HCC High School Solapur",
+    "url": "https://hccsolapur.in",
+    "logo": "https://hccsolapur.in/hcclogo.jpg",
+    "image": "https://hccsolapur.in/hcc.jpg",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Solapur",
+      "addressRegion": "Maharashtra",
+      "addressCountry": "IN"
+    }
+  }
+  </script>
     <!-- PWA Manifest -->
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#220707">
@@ -3116,3 +3151,4 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </script>
    </body>
 </html>
+
