--- a/index.html
+++ b/index.html
@@ -1944,7 +1944,14 @@ nav a:hover::after {
                     <img src="https://tqpjyqrlawhjuzugosyh.supabase.co/storage/v1/object/public/site_videos/yahya.jpg"
                          alt="Yahya Mundewadi" class="alumni-image">
                     <h3 class="alumni-name">Yahya Mundewadi</h3>
-                    <p class="alumni-designation"> Founder & CEO of Dominal Tech @dominal.in | Software Engineer </p>
+                    <p class="alumni-designation">
+  Founder of 
+  <a href="https://dominal.in" target="_blank" 
+     style="color: blue; text-decoration: none;">
+     Dominal Tech
+  </a> 
+  | Software Developer, Pune
+                    </p>
                     <p class="alumni-quote">The confidence and communication skills I gained here contributed greatly to my growth. Today, I'm a Founder and Software Developer. Forever thankful to my school and teachers.</p>
                 </div>
 
@@ -3215,4 +3222,5 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 </script>
    </body>
 </html>
+
 
